# juce-plugins

./: CMakeLists.txt  README.md
plugins/WaveShaperPro/: CMakeLists.txt  WaveShaperPro.jucer
plugins/WaveShaperPro/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugins/WaveShaperPro/Source/: JucePluginConfig.h  JucePluginDefines.h  Main.cpp  WaveShaperProAudioProcessor.cpp  WaveShaperProAudioProcessor.h  WaveShaperProAudioProcessorEditor.cpp  WaveShaperProAudioProcessorEditor.h  WaveShapingEngine.cpp  WaveShapingEngine.h
plugins/WaveShaperPro/cli-processor/: CMakeLists.txt  WaveShaperCLI.cpp
plugins/WaveShaperPro/plugin-build/: CMakeCache.txt  Makefile  cmake_install.cmake
plugins/WaveShaperPro/test-suite/: fix_test.sh  replace_test2.sh  run_tests.sh  validate_tests.sh
